--- a/Backend7_2/pom.xml
+++ b/Backend7_2/pom.xml
@@ -15,6 +15,13 @@
     </properties>
 
     <dependencies>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.34</version>
+            </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
